# loot

./: Cargo.toml  README.md
src/: cli.rs  error.rs  fs_utils.rs  index.rs  main.rs  normalize.rs  prune.rs  tag.rs  text.rs  transcode.rs
