[package]
name = "loot"
version = "0.8.0"
authors = ["Miles Egan <miles@plastaq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2"
globwalk = "~0"
regex = "~1"
unicode-normalization = "~0"
deunicode = "~1"
tempfile = "~3"
rayon = "~1"
lofty = "~0"
filetime = "~0"
