[package]
name = "loot"
version = "1.0.0"
authors = ["Miles Egan <miles@plastaq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globwalk = "~0"
regex = "~1"
unicode-normalization = "~0"
deunicode = "~1"
tempfile = "~3"
rayon = "~1"
lofty = "~0"
filetime = "~0"
clap = { version = "~4", features = ["derive"] }
