[package]
name = "loot"
version = "1.3.0"
authors = ["Miles Egan <miles@plastaq.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*

[dependencies]
globwalk = "~0"
regex = "~1"
unicode-normalization = "~0"
deunicode = "~1"
tempfile = "~3"
rayon = "~1"
lofty = "~0"
filetime = "~0"
clap = { version = "~4", features = ["derive"] }
